--- a/app.yaml
+++ b/app.yaml
@@ -12,6 +12,9 @@ handlers:
 - url: /robots.txt
   static_files: static/robots.txt
   upload: static/robots.txt
+- url: /icons
+  static_dir: static/icons
+  expiration: "30d"
 - url: /static
   static_dir: static
 - url: .*
